README: Formatting for site.
try to make it pretty.

Signed-off-by: Mattias Ryrlén <mattiasr@op5.com>